welcome.lessons.welcome.bat.bool1.Close10.scala.error
close10:3: error: missing arguments for method abs in object Math;
follow this method with `_' if you want to treat it as a partially applied function
if(Math.abs(a)=Math.abs(b)){return 0}else{
        ^